docs: gitignore에 naver-checkstyle-rules.xml 추가

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**
 !**/src/test/**
+naver-checkstyle-rules.xml
 
 ### STS ###
 .apt_generated
