--- a/build.gradle
+++ b/build.gradle
@@ -22,3 +22,5 @@ java {
 test {
     useJUnitPlatform()
 }
+sourceCompatibility = JavaVersion.VERSION_16
+targetCompatibility = JavaVersion.VERSION_16
