--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     testImplementation platform('org.assertj:assertj-bom:3.25.1')
     testImplementation('org.junit.jupiter:junit-jupiter')
     testImplementation('org.assertj:assertj-core')
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.10.0'
 }
 
 java {
